package it.boast.model.post;

public enum PostTypes {
    POLL
}
