
import Foundation

enum Status: String, Codable {
    case OPEN
    case CLOSED
    case CANCELLED
}
